added bg video and text

--- a/favicons/manifest.json
+++ b/favicons/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "gatsby-starter-default",
-  "short_name": "gatsby-starter-default",
+  "name": "rockyyip.github.io",
+  "short_name": "rockyyip.github.io",
   "description": null,
   "dir": "auto",
   "lang": "en-US",
